ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: di
spec:
  tls:
    - hosts:
      - ec2-54-164-163-169.compute-1.amazonaws.com
      secretName: tls-secret
  rules:
    - host: ec2-54-164-163-169.compute-1.amazonaws.com
      http:
        paths:
        - path: /
          backend:
            serviceName: ambassador
            servicePort: 80
